css shift bug

--- a/styles/home.css
+++ b/styles/home.css
@@ -18,7 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 85%;
+  height: 90%;
 }
 
 .App-header {
